home page ui completed

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
       margin: 0;
       padding: 0;
       font-family: 'Inter', sans-serif;
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: #1E1E1E;
+      color: white;
     }
   </style>
 </head>
